cluster-config/api/components.yaml
---
# Source: roman-coin-analyzer/templates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ric
labels:
  istio.io/rev: asm-1-24
---
# Source: roman-coin-analyzer/templates/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: analyzer-api-svc
  namespace: ric
spec:
  selector:
    app: analyzer-api
    name: imp-4895
  ports:
  - port: 80
    targetPort: 8080
    name: web
  - port: 9090
    targetPort: 9090
    name: metrics    
  type: ClusterIP
---
# Source: roman-coin-analyzer/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyzer-api
  namespace: ric
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analyzer-api
      name: imp-4895
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: analyzer-api
        name: imp-4895
        azure.workload.identity/use: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"        
    spec:
      serviceAccountName: imp-4895-app-identity
      containers:
      - name: analyzer-api
        image:  imp4895acr.azurecr.io/ric/analyzer-api:1af85078 
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false 
        ports:
        - containerPort: 8080
        - containerPort: 9090
        resources:
          limits:
            memory: "512Mi"
            cpu: "2"
          requests:
            memory: "128Mi"
            cpu: "0.5"
---
# Source: roman-coin-analyzer/templates/deployment.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name:  analyzer-api-vs
  namespace: ric
spec:
  hosts:
  -  "*"
  gateways:
  -  aks-istio-ingress/default-bjdazure-tech-gw
  http:
  - route:
    - destination:
        host: analyzer-api-svc
        port:
          number: 80
    corsPolicy:          
      allowMethods:
      - POST
      - PUT
      - GET
      - OPTIONS
      allowOrigins:
      - regex: 'https?://(?:[\w-]+\.)*(azurestaticapps\.net|azure-api\.net)(?:/[\w\-./?%&=]*)?'
      unmatchedPreflights: FORWARD
